bk_ida/gccida/c1/expand_call
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2536:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2547:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2547:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2551:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2553:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2554:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2555:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2556:5: error: expected ';' after expression
tree v23; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2556:6: error: use of undeclared identifier 'v23'
tree v23; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2557:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2558:5: error: expected ';' after expression
tree chain; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2558:6: error: use of undeclared identifier 'chain'
tree chain; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2562:5: error: expected ';' after expression
tree v29; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2562:6: error: use of undeclared identifier 'v29'
tree v29; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2567:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2578:7: error: use of undeclared identifier 'p_tree_value'; did you mean '_hex_value'?
tree *p_tree_value; // r14 
      ^~~~~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2578:6: error: invalid operands to binary expression ('union tree_node *' and 'const char [256]')
tree *p_tree_value; // r14 
~~~~ ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2581:5: error: expected ';' after expression
tree v48; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/calls.c:2581:6: error: use of undeclared identifier 'v48'
tree v48; // rbx 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_call/src/obj/calls.o] Error 1
